# esercizi_cpp

./: .gitignore  LICENSE
clock/: AlarmSwitch.qml  Button.qml  CMakeLists.txt  Counter.qml  Main.qml  Page.qml  PageAlarm.qml  PageAlarmList.qml  PageHome.qml  assets.qrc  clockobject.cpp  clockobject.h  main.cpp
cpp/es1.1/: CMakeLists.txt  es1_day1.cpp
cpp/es1.2/: CMakeLists.txt  es2_day1.cpp
cpp/es1.3/: CMakeLists.txt  es3_day1.cpp
cpp/es2.1/: CMakeLists.txt  date  date.cpp
cpp/es3.1/: CMakeLists.txt  PhoneBook.cpp
qml/barV/BarV/: Bar.qml  Bars.qml  CMakeLists.txt  Main.qml  main.cpp
qml/button/Button/: CMakeLists.txt  Main.qml  SwitchButton.qml  main.cpp
qml/chapter/chapter/: CMakeLists.txt  Chapter.qml  ChapterColumn.qml  Main.qml  main.cpp
